compiler/testData/diagnostics/tests/inference/builderInference/kt50989.fir.kt
// WITH_STDLIB

fun main() {
    <!CANNOT_INFER_PARAMETER_TYPE, NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>buildList<!> {
        <!OVERLOAD_RESOLUTION_AMBIGUITY!>println<!>(get(0))
    }
}